# proc-comm-lib-argo

./: CMakeLists.txt  README.md
3ty/beeblebrox/: CMakeLists.txt
3ty/beeblebrox/includes/beeblebrox/: INIReader.hpp  Logfile.hpp  Sha1.hpp  Uuid.hpp  auth.hpp  authuserpassword.hpp  cookie.hpp  httpcontent.hpp  httpcontentdockerstdin.hpp  httpcontentfile.hpp  httpcontentstring.hpp  httpresponse.hpp  httpresponsefile.hpp  httpresponsestream.hpp  httpresponsestring.hpp  httpresponsevnddockerrawstream.hpp  identifier.hpp  stringutil.hpp  uri.hpp
3ty/beeblebrox/includes/beeblebrox/routes/: FactoryRoutes.hpp
3ty/beeblebrox/includes/zaphodhands/: hand.hpp  uridocker.hpp  zaphodhand.hpp  zaphodhanddocker.hpp  zaphodhandftp.hpp
3ty/beeblebrox/sources/beeblebrox/: Sha1.cpp  main.cpp  stringutil.cpp  uri.cpp
3ty/codelithic/: CMakeLists.txt  Jenkinsfile
3ty/codelithic/rpm/: buildrpm.sh  codelithic.libconf.conf  codelithic.spec.in
3ty/codelithic/src/codelithic/include/codelithic/delegate/: Delegate.hpp  DelegateBase.hpp  MultiCastDelegate.hpp
3ty/codelithic/src/codelithic/include/codelithic/site/: Application.hpp  Controller.hpp  Entity.hpp  Enviroments.hpp  FCgiIO.h  Logger.hpp  PageNotFound.hpp  PageParameters.hpp  PageSite.hpp  Routes.hpp  Services.hpp  Session.hpp  Site.hpp  define.hpp
3ty/codelithic/src/codelithic/include/codelithic/site_ext/: HTTPJsonHeader.hpp  HTTPTextHeader.hpp  HTTPXmlHeader.hpp  PageSite.hpp  SiteLogger.hpp  jsonView.h
3ty/codelithic/src/codelithic/include/codelithic/thread/: InterlockedProperty.hpp  SafeQueueThreadWrapper.hpp  ThreadWrapper.hpp
3ty/codelithic/src/codelithic/include/codelithic/utils/: DateUtil.hpp  FileUtil.hpp  SafeQueue.hpp  Singleton.hpp  StringBuilder.hpp  StringUtil.hpp  capsuleholder.hpp
3ty/codelithic/src/codelithic/site/: Application.cpp  Controller.cpp  Entity.cpp  FCgiIO.cpp  Page.cpp  PageNotFound.cpp  PageParameters.cpp  Routes.cpp  Services.cpp  Session.cpp  Site.cpp
3ty/codelithic/src/codelithic/site_ext/: HTTPJsonHeader.cpp  HTTPTextHeader.cpp  HTTPXmlHeader.cpp  PageSite.cpp  jsonView.cpp
3ty/codelithic/src/codelithic/utils/: DateUtil.cpp  FileUtil.cpp  StringUtil.cpp
3ty/codelithic/src/test/page/: page.cpp
3ty/codelithic/src/test/template/: main.lsd  main.mlsd
3ty/libuuid-1.0.3/uuid/: CMakeLists.txt
3ty/y2j-master/: CMakeLists.txt
includes/eoepca/argo/: application.hpp  eoepcaargo.hpp
includes/eoepca/argo/model/: apiexception.hpp  workflow.hpp
includes/proc-comm-lib-argo/: argoworkflowapi.hpp  workflowgenerator.hpp
includes/proc-comm-lib-argo/api/: apiconfiguration.hpp  apiexception.hpp  workflowapi.hpp  workflowgenerator.hpp  workflowutils.hpp
includes/proc_comm_lib_argo/: application.hpp  argoworkflowapi.hpp
src/: eoepca_lib_argo.cpp  file1.yaml  main.cpp
src/api/: apiconfiguration.cpp  apiexception.cpp  argoworkflowapi.cpp  workflowapi.cpp  workflowgenerator.cpp  workflowutils.cpp
src/model/: apiresponse.cpp  apiresponse.hpp  nlohmann.hpp  workflow.cpp  workflow.hpp
tests/: CMakeLists.txt  main.cpp
tests/3ty/httpmockserver/src/: mock_server.cc
tests/3ty/httpmockserver/test/: CMakeLists.txt
tests/application/: test01.cpp  test02.cpp  testlibargoutils.hpp
tests/application/data/: test1_workflow.yaml  test2_delete_response.json  test2_get_reponse.json  test2_list_response.json  test2_submit_response.json  test2_workflow.yaml  test3_workflow.yaml  test4_workflow.yaml
